* capturing runner context instead

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,5 +22,7 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
-    - name: output info
-      run: uname -a
+    - name: Dump runner context
+      env:
+        RUNNER_CONTEXT: ${{ toJson(runner) }}
+      run: echo "$RUNNER_CONTEXT"
