* also include uname -a

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -26,4 +26,6 @@ jobs:
       if: always()
       env:
         RUNNER_CONTEXT: ${{ toJson(runner) }}
-      run: echo "$RUNNER_CONTEXT"
+      run: |
+        echo "$RUNNER_CONTEXT"
+        uname -a
